Revision history for Perl module WebService::Linode

{{$NEXT}}
    - API KVM support:
      - optional hypervisor argument to linode_clone
      - linode_config_create & _update helper_xen deprecated in favor of
        new arg helper_distro
    - New method group professionalservices_scope
    - Node balancer health check 'http_body' renamed to 'http' to reflect that
      it now only checks the first 16K of the response

0.27  2015-02-28 23:49:33 EST
    - Big changes but not in functionality.  Import more verbose description
      information for POD via the Linode api.spec method.

0.26  2015-01-06 20:01:46 EST
    - Patch from James Ottinger for image_update method 74816d

0.25  2014-12-10 12:52:40 PST
    - Patch from James Ottinger for additional Linode Images support a89bfc
    - support for network helper in linode_config_create & linode_config_update
      see <https://forum.linode.com/viewtopic.php?f=26&t=11469>

0.24  2014-10-18 22:43:33 EDT
    - add explicit section to POD for send_queued_requests
    - Add Test::Pod::Coverage to cpanfile for develop

0.23  2014-10-14 16:31:36 EDT
    - Batched API request support by Kevan Benson <kbenson@cpan.org>

0.22  2014-07-24 10:13:47 EDT
    - support for the Linode Images service, currently in beta
      see <https://forum.linode.com/viewtopic.php?f=26&t=11180>

0.21  2014-07-01 13:02:10 EDT
    - new avail_nodebalancers and linode_ip_setrdns methods
    - linode_disk_create now optionaly takes fromdistributionid, isreadonly,
      rootpass, and rootsshkey
    - linode_disk_createfromstackscript now optionally takes rootsshkey
    - paymentterm is now optional for nodebalancer_create

0.20  2014-03-13 11:42:49 EDT
    - support for adding new private and public IPs to a Linode
    - support for swapping/moving an IP between Linodes
    - moar deprecated WebService::Linode::DNS
      - all methods carp
      - most of POD replaced, points to WebService::Linode
    - add LWP to cpanfile for CPANTS
